--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -1,10 +1,11 @@
 <footer class="footer">
-   
     <div class="footer-content">
         <div class="footer-logo">
-            <img src="./public/logou.png" alt="">
-          
-            <p>Legal Notice</p>
+          <!-- <img src="marc.png" alt=""> -->
+            <div class="logo">
+                <img src="marc.png" alt="Logo" />
+            </div>
+            <p >Legal Notice</p>
         </div>
         <div class="footer-copyright">
             <p>© Marc Vossler 2024</p>
@@ -16,4 +17,3 @@
         </div>
     </div>
 </footer>
-<!-- sddd -->
