--- a/src/app/shared/footer/footer.component.scss
+++ b/src/app/shared/footer/footer.component.scss
@@ -3,38 +3,28 @@
     color: white;
     padding: 40px 50px;
     display: flex;
-    justify-content: center;
+    justify-content: flex-start;
     height: 123px;
 
     .footer-content {
         display: flex;
         justify-content: space-between;
         align-items: center;
-        max-width: 1200px;
+        max-width: 1500px;
         width: 100%;
 
-        .footer-logo {
-            display: flex;
-            flex-direction: column;
+        .footer-logo .logo img   {
+            height: 87px; 
+            width: auto; 
+            object-fit: contain; 
+            margin-bottom: 10px; 
 
-            h1 {
-                font-size: 24px;
-                font-weight: bold;
-
-                span {
-                    color: #7dff63; // Grüne Farbe für "K"
-                }
-            }
-
-            p {
-                margin: 5px 0 0;
-                font-size: 12px;
-                color: #b6b6b6;
-            }
+           
         }
+        
 
         .footer-copyright {
-            font-size: 14px;
+            font-size: 12px;
             text-align: center;
             color: #b6b6b6;
         }
@@ -175,16 +165,15 @@
                     width: 24px;
                     height: 24px;
 
-                    img {
-                        width: 100%;
-                        height: auto;
-                        filter: invert(100%);
-                        transition: transform 0.3s ease;
-
-                        &:hover {
-                            transform: scale(1.2);
-                        }
-                    }
+                    .logo img {
+                        height: 87px;
+                        ;
+                        /* Höhe des Logos anpassen */
+                        width: auto;
+                        /* Breite automatisch berechnen */
+                        object-fit: contain;
+                        /* Verhindert Verzerrungen */
+                      }
                 }
             }
 
