--- a/src/app/mainPage/contact/contact.component.scss
+++ b/src/app/mainPage/contact/contact.component.scss
@@ -165,8 +165,8 @@ $checkbox-link-color: #9b59b6;
 
 .arrow {
     position: absolute;
-    bottom: -60px;
-    right: 10px;
+
+    right: 40px;
     z-index: 10;
 
 
@@ -1003,6 +1003,8 @@ $checkbox-link-color: #9b59b6;
                     display: block;
                     margin-bottom: 20px;
                     margin-top: 83px;
+                    margin-top: 136px;
+
                 }
 
                 p {
