--- a/src/app/mainPage/contact/contact.component.scss
+++ b/src/app/mainPage/contact/contact.component.scss
@@ -112,7 +112,7 @@ $checkbox-link-color: #9b59b6;
     }
 
     .checkbox {
-        display: flex;
+        // display: flex;
         align-items: flex-start;
         gap: 10px;
         font-size: 14px;
@@ -268,7 +268,7 @@ $checkbox-link-color: #9b59b6;
                     }
 
                     .checkbox {
-                        display: flex;
+                        // display: flex;
                         align-items: flex-start;
                         gap: 10px;
                         font-size: 10px;
@@ -421,7 +421,7 @@ $checkbox-link-color: #9b59b6;
                     }
 
                     .checkbox {
-                        display: flex;
+                        // display: flex;
                         align-items: flex-start;
                         gap: 10px;
                         font-size: 10px;
@@ -576,7 +576,7 @@ $checkbox-link-color: #9b59b6;
                     }
 
                     .checkbox {
-                        display: flex;
+                        // display: flex;
                         align-items: flex-start;
                         gap: 10px;
                         font-size: 9px;
@@ -730,7 +730,7 @@ $checkbox-link-color: #9b59b6;
                     }
 
                     .checkbox {
-                        display: flex;
+                        // display: flex;
                         align-items: flex-start;
                         gap: 10px;
                         font-size: 9px;
@@ -888,7 +888,7 @@ $checkbox-link-color: #9b59b6;
                     }
 
                     .checkbox {
-                        display: flex;
+                        // display: flex;
                         align-items: flex-start;
                         gap: 10px;
                         font-size: 9px;
@@ -1048,7 +1048,7 @@ $checkbox-link-color: #9b59b6;
                     }
 
                     .checkbox {
-                        display: flex;
+                        // display: flex;
                         align-items: flex-start;
                         gap: 10px;
                         font-size: 9px;
