--- a/src/app/mainPage/skills/skills.component.scss
+++ b/src/app/mainPage/skills/skills.component.scss
@@ -750,6 +750,7 @@
                     background-color: #5fc119;
                     box-shadow: 0px 15px 25px rgba(0, 0, 0, 0.3);
                     transform: translateY(-2px);
+                    cursor: pointer;
                     
                 }
 
