--- a/src/app/mainPage/portfolio/portfolio.component.scss
+++ b/src/app/mainPage/portfolio/portfolio.component.scss
@@ -111,6 +111,7 @@
 
         .portfolio-card:nth-child(2) {
             flex-direction: row-reverse;
+            padding-left: 135px;
           
 
             img {
@@ -233,11 +234,19 @@
             }
 
             .portfolio-card:nth-child(2) {
-                flex-direction: column; // Zweite Karte wird ebenfalls vertikal ausgerichtet
-                text-align: center;
+                display: flex
+                ;
+                        flex-direction: column;
+                        align-items: center;
+                        text-align: center;
+                        gap: 20px;
+                        padding: 15px;
 
                 img {
-                    margin: 0; // Margin entfernen
+                    margin: 0 auto;
+                    width: 31%;
+                    max-width: 300px;
+                    height: auto;
                 }
             }
         }
@@ -372,13 +381,19 @@
             }
 
             .portfolio-card:nth-child(2) {
-                flex-direction: column;
-                /* Bild und Details vertikal */
-                text-align: center;
+                display: flex
+                ;
+                        flex-direction: column;
+                        align-items: center;
+                        text-align: center;
+                        gap: 20px;
+                        padding: 15px;
 
                 img {
                     margin: 0 auto;
-                    /* Zentriert */
+                    width: 31%;
+                    max-width: 300px;
+                    height: auto;
                 }
             }
         }
@@ -514,13 +529,19 @@
             }
 
             .portfolio-card:nth-child(2) {
-                flex-direction: column;
-                /* Bild und Details vertikal */
-                text-align: center;
+                display: flex
+                ;
+                        flex-direction: column;
+                        align-items: center;
+                        text-align: center;
+                        gap: 20px;
+                        padding: 15px;
 
                 img {
                     margin: 0 auto;
-                    /* Zentriert */
+                    width: 31%;
+                    max-width: 300px;
+                    height: auto;
                 }
             }
         }
@@ -673,10 +694,14 @@
                 flex-direction: column;
                 /* Bild und Details vertikal */
                 text-align: center;
+                display: contents;
 
                 img {
                     margin: 0 auto;
-                    /* Zentriert */
+                    margin: 0 auto;
+                    width: 62%;
+                    max-width: 300px;
+                    height: auto;
                 }
             }
         }
