--- a/src/app/mainPage/github-links/github-links.component.html
+++ b/src/app/mainPage/github-links/github-links.component.html
@@ -5,17 +5,17 @@
             <img src="./2.hero/icon/Vector.png" alt="">
         </div>
         <div class="buttonsSocial">
-            <img src="2.hero\icon\Github.png" alt="Github">
+            <a href="https://github.com/DerBlockProgrammer" target="_blank" rel="noopener noreferrer"> <img src="2.hero\icon\Github.png" alt="Github"></a>
            
             
-           
+             
         </div>
         <div class="buttonsSocial">
-            <img src="2.hero\icon\mail.png" alt="Email">
+            <a href="mailto:info@DieAkadmie.de" target="_blank" rel="noopener noreferrer">     <img src="2.hero\icon\mail.png" alt="Email"></a>
         </div>
         <div class="buttonsSocial">
-            <img src="2.hero\icon\linkedIn.png" alt="linkedIn">
+            <a href="https://www.linkedin.com/in/marcvossler?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app" target="_blank" rel="noopener noreferrer"><img src="2.hero\icon\linkedIn.png" alt="linkedIn"></a>
         </div>
-        <h3>Marcvosslergmail.com</h3>
+        <h3>Info&#64;MarcVossler.de</h3>
     </div>
 </section>
