--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -11,9 +11,9 @@
             <p>© Marc Vossler 2024</p>
         </div>
         <div class="footer-icons">
-            <a href="https://github.com/DerBlockProgrammer"><img src="./background/github.png" alt=""></a>
-            <a href="https://www.linkedin.com/in/marcvossler?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app"><img src="2.hero/icon/linkedIn.png" alt=""></a>
-            <a href="#"><img src="2.hero/icon/mail.png" alt=""></a>
+            <a href="https://github.com/DerBlockProgrammer"  target="_blank" rel="noopener noreferrer"><img src="./background/github.png" alt=""></a>
+            <a href="https://www.linkedin.com/in/marcvossler?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app" target="_blank" rel="noopener noreferrer"><img src="2.hero/icon/linkedIn.png" alt=""></a>
+            <a href="mailto:info@DieAkadmie.de" target="_blank" rel="noopener noreferrer"> <img src="2.hero/icon/mail.png"  target="_blank" rel="noopener noreferrer"alt=""></a>
         </div>
     </div>
 </footer>
