--- a/src/app/mainPage/about-me/about-me.component.scss
+++ b/src/app/mainPage/about-me/about-me.component.scss
@@ -71,6 +71,7 @@
             width: 300px;
             height: 300px;
             object-fit: cover;
+            object-position: 29% center;
            
         }
 
