--- a/src/styles.scss
+++ b/src/styles.scss
@@ -10,6 +10,13 @@ html {
 overflow-x: hidden;
 }
 
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  scroll-behavior: smooth;
+  }
+
 body{
   background-color: #141D2F;
 }
